--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "^6.3.10",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-axios": "^0.17.1",
-    "typescript": "^4.6.3",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
